--- a/src/main/resources/templates/complaints.html
+++ b/src/main/resources/templates/complaints.html
@@ -2,7 +2,7 @@
 <html class="x-admin-sm" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>订单列表</title>
+    <title>充值记录</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
@@ -20,7 +20,7 @@
           <span class="layui-breadcrumb">
             <a th:href="@{/admin/welcome}">首页</a>
             <a>
-              <cite>订单列表</cite></a>
+              <cite>充值记录</cite></a>
           </span>
     <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" onclick="location.reload()" title="刷新">
         <i class="layui-icon layui-icon-refresh" style="line-height:30px"></i></a>
@@ -30,9 +30,9 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-body ">
-                    <form class="layui-form layui-col-space5" th:action="@{/foodOrder/findOrderIdAll}" th:method="post">
+                    <form class="layui-form layui-col-space5" th:action="@{/qt/findAllRechargeID}" th:method="post">
                         <div class="layui-inline layui-show-xs-block">
-                            <input type="text" name="OrderId"  placeholder="请输入订单ID" autocomplete="off" class="layui-input">
+                            <input type="text" name="UserName"  placeholder="请输入用户名" autocomplete="off" class="layui-input">
                         </div>
                         <div class="layui-inline layui-show-xs-block">
                             <button class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
@@ -45,40 +45,18 @@
                         <thead>
                         <tr>
                             <th>ID</th>
-                            <th>订单编号</th>
                             <th>用户名</th>
-                            <th>座位号</th>
-                            <th>菜品</th>
-                            <th>数量</th>
-                            <th>订单时间</th>
-                            <th>支付时间</th>
-                            <th>订单状态</th>
-                            <th>订单总价</th>
-                            <th>操作</th>
+                            <th>充值金额</th>
+                            <th>充值时间</th>
+                            <!--<th>操作</th>-->
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="c:${pageInfo.list}">
-                            <td th:text="${c.foodorderid}">id</td>
-                            <td th:text="${c.OrderId}">订单编号</td>
-                            <td th:text="${c.UserName}">用户名</td>
-                            <td th:text="${c.seat}">座位号</td>
-                            <td th:text="${c.fNames}" th:title="${c.fNames}"  style="max-width: 100px;overflow: hidden; text-overflow:ellipsis;white-space: nowrap">菜品</td>
-                            <!--<td th:text="${c.fNames}">菜品</td>-->
-                            <td th:text="${c.goodsNum}">数量</td>
-
-                            <td th:text="${#dates.format(c.OrderTime,'yyyy-MM-dd hh:mm:ss')}">订单时间</td>
-                            <td th:text="${#dates.format(c.PaymentTime,'yyyy-MM-dd hh:mm:ss')}">支付时间</td>
-                            <td th:if="${c.OrderStatus == 0}">未支付</td>
-                            <td th:if="${c.OrderStatus == 1}">已支付</td>
-                            <td th:if="${c.OrderStatus == 2}">已完成</td>
-                            <td><b th:text="${'￥'+c.OrderPrice}">订单总价</b></td>
-                            <td>
-                                <a th:data-id="${c.OrderId}" onclick="xadmin.open('订单详情','/foodOrder/findOrderId','?OrderId=',this.getAttribute('data-id'),1300,400)" title="订单详情">
-                                    <i class="layui-icon">&#xe63c;</i></a>
-
-                                </a>
-                            </td>
+                        <tr th:each="cp:${pageInfo.list}">
+                            <td th:text="${cp.rId}">ID</td>
+                            <td th:text="${cp.UserName}">用户名</td>
+                            <td th:text="${'￥'+cp.sum}">充值金额</td>
+                            <td th:text="${#dates.format(cp.registration,'yyyy-MM-dd hh:mm:ss')}">充值时间</td>
                         </tr>
                         </tbody>
                     </table>
@@ -86,11 +64,11 @@
                 <div class="layui-card-body ">
                     <div class="page">
                         <div>
-                            <a th:text="首页" th:href="@{/foodOrder/findallOrder(currentPage=${pageInfo.firstPage})}"></a>
-                            <a th:text="上一页" th:href="@{/foodOrder/findallOrder(currentPage=${pageInfo.pageNum-1})}"></a>
-                            <a th:each="p:${pageInfo.getNavigatepageNums()}" th:text="${p}" th:href="@{/foodOrder/findallOrder(currentPage=${p})}"></a>
-                            <a th:text="下一页" th:href="@{/foodOrder/findallOrder(currentPage=${pageInfo.pageNum+1})}"></a>
-                            <a th:text="尾页" th:href="@{/foodOrder/findallOrder(currentPage=${pageInfo.lastPage})}"></a>
+                            <a th:text="首页" th:href="@{/qt/findAllRecharge(currentPage=${pageInfo.firstPage})}"></a>
+                            <a th:text="上一页" th:href="@{/qt/findAllRecharge(currentPage=${pageInfo.pageNum-1})}"></a>
+                            <a th:each="p:${pageInfo.getNavigatepageNums()}" th:text="${p}" th:href="@{/qt/findAllRecharge(currentPage=${p})}"></a>
+                            <a th:text="下一页" th:href="@{/qt/findAllRecharge(currentPage=${pageInfo.pageNum+1})}"></a>
+                            <a th:text="尾页" th:href="@{/qt/findAllRecharge(currentPage=${pageInfo.lastPage})}"></a>
                         </div>
                     </div>
                 </div>
